implementando map